[package]
name = "xdp-nat-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
xdp-nat-common = { path = "../xdp-nat-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-nat"
path = "src/main.rs"
